<resources>
    <string name="app_name">Trashy</string>
    <string name="history">History results</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="camera_fragment_label">Camera Fragment</string>

    <string name="title_home">Welcome to Trashy</string>
    <string name="description_home">Take a photo to see how to expose the trash you found!</string>
    <string name="example_extrainfo">Metalen verpakkingen kunnen oneindig en volledig gerecycled worden. Eerst haalt de verwerker etiketten, plastics en folies van het blik af. Daarna wordt het blik geplet en samen met staal omgesmolten. Zo kunnen er weer allerlei nieuwe dingen van gemaakt worden, zoals frisdrankblikjes, fietsen en autovelgen. Ook blik dat bij het restafval belandt en verbrandt, kan grotendeels gerecycled worden omdat het bestand is tegen de hitte van de verbrandingsoven en uit de as gehaald kan worden.</string>
    <string name="btn_tip">Tip</string>
    <string name="btn_send_feedback">Send feedback</string>
    <string name="example_inleveren">Inleveren bij: bak of zak voor plastic, metalen verpakkingen en drinkpakken</string>
    <string name="example_result_title">Plastic bottle</string>
    
    <string name="no_items_found">No items found. Take a picture!</string>
    <string name="delete_history">delete History</string>
    <string name="take_photo">Take photo</string>
    <string name="history_resuts_title">HISTORY</string>
    <string name="history_deleted">HISTORY DELETED</string>
    <string name="no_items">THERE ARE NO ITEMS TO BE DELETED</string>
    <string name="conform">Are you sure to want to delete?</string>
    <string name="NO">NO</string>
    <string name="YES">YES</string>
    <string name="ok">OK</string>
    <string name="tip">Tip</string>
    <string name="no_prediction">NIKS IS GEVONDEN WAT ER OP LIJKT. MAAK OPNIEUW EEN FOTO</string>
    <string name="no_camera_found">THERE IS NO CAMERA APP ON YOUR PHONE</string>

    <string name="file_provider">com.lalee.capstoneproject.fileprovider</string>
    <string name="camera_loading">CAMERA LOADING...</string>
</resources>