<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_results_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_resuts_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="4dp"/>

    <FrameLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_posts_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/item_result">

        </androidx.recyclerview.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/pb_loading_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTintMode="src_atop" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_camera_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/take_photo"
            android:visibility="invisible"
            app:icon="@android:drawable/ic_menu_camera" />

        <TextView
            android:id="@+id/tv_result_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_items_found"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible" />

    </FrameLayout>

</LinearLayout>


