<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/iv_result_small_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/example_result_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_result_small_logo"
            app:layout_constraintTop_toTopOf="@+id/iv_result_small_logo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="370dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/example_inleveren"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/iv_result_small_logo"
            app:layout_constraintTop_toBottomOf="@+id/iv_result_small_logo" />

        <ImageView
            android:id="@+id/iv_result_logo"
            android:layout_width="380dp"
            android:layout_height="135dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_result_extrainfo"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/example_extrainfo"
            app:layout_constraintEnd_toEndOf="@+id/iv_result_logo"
            app:layout_constraintStart_toStartOf="@+id/iv_result_logo"
            app:layout_constraintTop_toBottomOf="@+id/iv_result_logo" />

<!--        <Button-->
<!--            android:id="@+id/btn_feedback"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:text="@string/btn_send_feedback"-->
<!--            app:layout_constraintStart_toStartOf="@+id/tv_result_extrainfo"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tv_result_extrainfo" />-->

        <Button
            android:id="@+id/btn_moreinfo"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/btn_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_result_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
